# ChangeLog for sys-kernel/linux26-headers
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux26-headers/Attic/ChangeLog,v 1.14 2004/07/22 18:29:23 plasmaroo Exp $

  22 Jul 2004; <plasmaroo@gentoo.org>
  files/linux26-headers-2.6.7-appCompat.patch:
  Patch for bug #57664 so "make prepare" works right on ARM/HPPA et al. Thanks to
  Mike Frysinger for the patch...

  21 Jul 2004; <plasmaroo@gentoo.org>
  files/linux26-headers-2.6.7-appCompat.patch:
  Fix for DirectFB.

  21 Jul 2004; Travis Tilley <lv@gentoo.org> linux26-headers-2.6.7-r3.ebuild:
  adding ~amd64 keyword

  20 Jul 2004; Mike Frysinger <vapier@gentoo.org>
  +files/linux26-headers-2.6.7-generic-arm-prepare.patch,
  linux26-headers-2.6.7-r3.ebuild:
  Move the appCompat patch to the end of src_compile() because it breaks the
  `make prepare` step which is needed by some architectures #57664.

  19 Jul 2004; Mike Frysinger <vapier@gentoo.org>
  linux26-headers-2.6.7-r3.ebuild:
  Stop running $(uname -m) to figure out what to set ARCH to. Use the functions
  from kernel.eclass to translate portage ARCH to kernel ARCH.

  18 Jul 2004; <plasmaroo@gentoo.org>
  files/linux26-headers-2.6.7-appCompat.patch:
  Compile fixes for LVM2 and raidtools which include their own copies of
  <linux/list.h> without checking for the kernel version being included. Bug
  #57096 and #57373.

*linux26-headers-2.6.7-r3 (15 Jul 2004)

  15 Jul 2004; <plasmaroo@gentoo.org> -linux26-headers-2.6.7-r2.ebuild,
  +linux26-headers-2.6.7-r3.ebuild,
  files/linux26-headers-2.6.7-appCompat.patch:
  MPlayer and transcode inline fix - bug #57202.

*linux26-headers-2.6.7-r2 (13 Jul 2004)

  13 Jul 2004; <plasmaroo@gentoo.org> -linux26-headers-2.6.7-r1.ebuild,
  +linux26-headers-2.6.7-r2.ebuild,
  files/linux26-headers-2.6.7-appCompat.patch:
  Version bump. Added explicit casting to certain headers so that C++