@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux26-headers/Attic/linux26-headers-2.6.7-r3.ebuild,v 1.5 2004/07/22 18:53:06 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux26-headers/Attic/linux26-headers-2.6.7-r3.ebuild,v 1.6 2004/07/23 09:26:28 lv Exp $
 
 ETYPE="headers"
 inherit kernel eutils
@@ -63,8 +63,8 @@ src_compile() {
 	# symlink in /usr/include/, and make defconfig will fail.
 	set_arch_to_kernel
 	ln -sf ${S}/include/asm-${ARCH} ${S}/include/asm
-	make defconfig HOSTCFLAGS="-Wall -Wstrict-prototypes -O2 -fomit-frame-pointer -I${S}/include/"
-	make prepare || die "prepare failed"
+	make defconfig HOSTCFLAGS="-Wall -Wstrict-prototypes -O2 -fomit-frame-pointer -I${S}/include/" || die "defconfig failed"
+	make prepare HOSTCFLAGS="-Wall -Wstrict-prototypes -O2 -fomit-frame-pointer -I${S}/include/" || die "prepare failed"
 	set_arch_to_portage
 }
 
